--- a/src/parts/HomeIcons2.css
+++ b/src/parts/HomeIcons2.css
@@ -26,7 +26,7 @@
   border-radius: 12px;
   background-color: white;
 }
-.icon-line .each-icon:hover {
+.icon-line .each-icon2:hover {
   background-color: black;
   color: white;
 }
