--- a/src/parts/HomeIcons.css
+++ b/src/parts/HomeIcons.css
@@ -25,6 +25,7 @@
   cursor: pointer;
   border-radius: 12px;
   background-color: white;
+  color: black;
 }
 .icon-line .each-icon:hover {
   background-color: black;
