--- a/src/parts/HomeIcons2.css
+++ b/src/parts/HomeIcons2.css
@@ -25,6 +25,7 @@
   cursor: pointer;
   border-radius: 12px;
   background-color: white;
+  color: black;
 }
 .icon-line .each-icon2:hover {
   background-color: black;
